[workspace]
resolver = "2"
members = [
  "tapa-protocol",
  "tapa-task-graph",
  "tapa-graphir",
  "tapa-py-bindings",
]

[workspace.lints.clippy]
# Enable lint groups
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Allow: adding doc sections to every fallible/panicking fn is too verbose
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Allow: const fn changes API semantics and is overzealous
missing_const_for_fn = "allow"

# Allow: common Rust module naming pattern
module_name_repetitions = "allow"

# Allow: option_if_let_else often less readable than match
option_if_let_else = "allow"

# Allow: too many trivial getters to annotate
must_use_candidate = "allow"

# Allow: cognitive complexity thresholds are too low for serde impls
cognitive_complexity = "allow"

# Allow: significant_drop_tightening has false positives
significant_drop_tightening = "allow"

# Allow: iteration order over HashMap/HashSet is irrelevant in schema crates
iter_over_hash_type = "allow"

# ── Restriction lints (cherry-picked) ──
# Style consistency
semicolon_outside_block = "deny"
needless_raw_strings = "deny"
missing_assert_message = "deny"

# Prevent common mistakes
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
error_impl_error = "deny"
string_add = "deny"

# Prevent subtle bugs
assertions_on_result_states = "deny"
wildcard_enum_match_arm = "deny"

# Code quality
allow_attributes_without_reason = "deny"
redundant_type_annotations = "deny"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.dependencies]
base64 = "0.22"
flate2 = "1"
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
thiserror = "2"
tapa-protocol = { path = "tapa-protocol" }
tapa-task-graph = { path = "tapa-task-graph" }
tapa-graphir = { path = "tapa-graphir" }
