"""TAPA Python CLI build configuration."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_files", "pkg_mklink")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:packaging.bzl", "py_wheel")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@tapa_deps//:requirements.bzl", "requirement")
load("//bazel:pytest_rules.bzl", "py_test")

package(default_visibility = ["//tapa:__subpackages__"])

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

py_wheel(
    name = "tapa-wheel",
    distribution = "tapa",
    python_tag = "py3",
    version = "0.dev",
    deps = [
        ":tapa-py-libs",
    ],
)

# Back-compat executable for downstream labels that still reference
# `//tapa:tapa` (e.g. `tests/apps/*` analyze/simulation gates and the
# default `tapa_cli` attribute in `bazel/tapa_rules.bzl`). The legacy
# `py_binary(name = "tapa")` was retired in AC-8; the real entry point
# is the native Rust binary `//tapa-core:tapa-cli`.
#
# The wrapper adds the full TAPA runtime tree — `tapacc`, `tapa-cpp`,
# `tapa-system-include` (clang built-ins), `tapa-lib` public headers
# and extra-runtime-include, and `fpga-runtime` public headers — as
# runfiles so that `tapa-cli`'s `find_resource` walk-up discovery
# resolves every `POTENTIAL_PATHS` key (tapacc-binary, tapa-cpp-binary,
# tapa-system-include, tapa-extra-runtime-include, tapa-lib-include,
# tapa-lib-lib, fpga-runtime-include, fpga-runtime-lib) when invoked
# via `bazel run //tapa:tapa`. The retired Python `py_binary` used to
# provide this transitively via its dependency closure.
sh_binary(
    name = "tapa",
    srcs = ["tapa_wrapper.sh"],
    data = [
        "//fpga-runtime:include",
        "//tapa-core:tapa-cli",
        "//tapa-cpp:gen-tapa-cpp",
        "//tapa-lib:extra-runtime-include",
        "//tapa-lib:include",
        "//tapa-system-include",
        "//tapacc",
    ] + select({
        # The runtime libraries (libtapa, libfrt, gflags, glog,
        # tinyxml2, yaml-cpp, …) and `tapa-extra-runtime-include` are
        # all gated on `@platforms//os:linux`, so listing them
        # unconditionally would break analysis on macOS/Windows. Keep
        # them under the same select the retired `py_binary` used so
        # `bazel run //tapa:tapa -- g++` can link host executables on
        # Linux.
        "@platforms//os:linux": [
            "//fpga-runtime:pkg-extra-runtime-deps",
            "//fpga-runtime:pkg-lib",
            "//tapa-lib:pkg-extra-runtime-deps",
            "//tapa-lib:pkg-lib",
            "//tapa-system-include:tapa-extra-runtime-include",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Library bundle of the surviving Python helpers (program/codegen/AST
# scaffolding still consumed by tapa-cli's bridge-side tests). The
# legacy click CLI (`__main__.py`) and step modules (`tapa/steps/*`)
# were retired in AC-8; the runtime entry point is the native Rust
# binary `//tapa-core:tapa-cli`.
py_library(
    name = "tapa-py-libs",
    deps = [
        ":__init__",
        ":core",
        ":instance",
        ":safety_check",
        ":task",
        ":util",
        "//tapa/assets",
        "//tapa/common",
        requirement("click"),
    ],
)

py_library(
    name = "__init__",
    srcs = [
        "__init__.py",
        "_version.py",
    ],
    data = [
        ":VERSION",
    ],
)

py_library(
    name = "core",
    srcs = ["core.py"],
    deps = [
        ":codegen",
        ":instance",
        ":program_codegen",
        ":task",
        ":util",
        "//tapa/common:paths",
        "//tapa/common:target",
        "//tapa/graphir",
        "//tapa/program:directory",
        "//tapa/program:hls",
        "//tapa/program:pack",
        "//tapa/program:rtl_codegen",
        "//tapa/program:synthesis",
        "//tapa/verilog:ast_utils",
        "//tapa/verilog:util",
        "//tapa/verilog/ast:ioport",
        "//tapa/verilog/ast:logic",
        "//tapa/verilog/ast:signal",
        "//tapa/verilog/ast:width",
        "//tapa/verilog/xilinx:module",
        requirement("pyverilog"),
        requirement("pyyaml"),
    ],
)

py_library(
    name = "protocol",
    srcs = ["protocol.py"],
)

py_library(
    name = "instance",
    srcs = ["instance.py"],
    deps = [
        ":protocol",
        ":util",
        "//tapa/verilog:util",
        "//tapa/verilog/ast:ioport",
        "//tapa/verilog/ast:signal",
        "//tapa/verilog/ast:width",
        requirement("pyverilog"),
    ],
)

py_library(
    name = "safety_check",
    srcs = ["safety_check.py"],
    deps = [
        ":task",
    ],
)

py_library(
    name = "task",
    srcs = ["task.py"],
    deps = [
        ":__init__",
        ":instance",
        ":task_codegen",
        ":util",
        "//tapa/backend",
        "//tapa/verilog:ast_utils",
        "//tapa/verilog:axi_xbar",
        "//tapa/verilog:util",
        "//tapa/verilog/ast:ioport",
        "//tapa/verilog/ast:logic",
        "//tapa/verilog/ast:signal",
        "//tapa/verilog/ast:width",
        "//tapa/verilog/xilinx:axis",
        "//tapa/verilog/xilinx:const",
        "//tapa/verilog/xilinx:m_axi",
        "//tapa/verilog/xilinx:module",
        requirement("pyverilog"),
    ],
)

py_library(
    name = "program_codegen",
    srcs = glob(["program_codegen/*.py"]),
    deps = [
        ":instance",
        ":task",
        ":util",
        "//tapa/common:target",
        "//tapa/verilog:ast_utils",
        "//tapa/verilog:axi_xbar",
        "//tapa/verilog:util",
        "//tapa/verilog/ast:ioport",
        "//tapa/verilog/ast:logic",
        "//tapa/verilog/ast:signal",
        "//tapa/verilog/ast:width",
        "//tapa/verilog/xilinx",
        "//tapa/verilog/xilinx:async_mmap",
        "//tapa/verilog/xilinx:const",
        "//tapa/verilog/xilinx:module",
        requirement("pyverilog"),
        requirement("pyyaml"),
    ],
)

py_library(
    name = "codegen",
    srcs = glob(["codegen/*.py"]),
    deps = [
        ":instance",
        ":protocol",
        ":task_codegen",
        "//tapa/verilog:util",
        "//tapa/verilog/ast:ioport",
        "//tapa/verilog/ast:signal",
        "//tapa/verilog/ast:width",
        "//tapa/verilog/xilinx:module",
        requirement("pyverilog"),
        requirement("pyyaml"),
    ],
)

py_library(
    name = "task_codegen",
    srcs = glob(["task_codegen/*.py"]),
    deps = [
        ":instance",
        ":util",
        "//tapa/backend",
        "//tapa/verilog:ast_utils",
        "//tapa/verilog:axi_xbar",
        "//tapa/verilog:util",
        "//tapa/verilog/ast:logic",
        "//tapa/verilog/ast:signal",
        "//tapa/verilog/ast:width",
        "//tapa/verilog/xilinx:axis",
        "//tapa/verilog/xilinx:const",
        "//tapa/verilog/xilinx:m_axi",
        requirement("pyverilog"),
    ],
)

py_test(
    name = "task_test",
    srcs = ["task_test.py"],
    deps = [
        ":codegen",
        ":core",
        ":task",
    ],
)

py_library(
    name = "util",
    srcs = ["util.py"],
    deps = [
        requirement("coloredlogs"),
    ],
)

py_test(
    name = "util_test",
    srcs = ["util_test.py"],
    deps = [
        ":util",
    ],
)

# Ship the native Rust `tapa` binary as `usr/share/tapa/runtime/tapa`
# (AC-8). The Python+nuitka `tapa-bin` it replaces was retired with
# `tapa/__main__.py`; the entry point is `//tapa-core:tapa-cli`.
pkg_files(
    name = "pkg-runtime",
    srcs = ["//tapa-core:tapa-cli"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "usr/share/tapa/runtime",
    renames = {"//tapa-core:tapa-cli": "tapa"},
    visibility = ["//visibility:public"],
)

# link usr/share/tapa/runtime/tapa to /usr/bin/tapa
pkg_mklink(
    name = "pkg-link",
    link_name = "usr/bin/tapa",
    target = "../share/tapa/runtime/tapa",
    visibility = ["//visibility:public"],
)

pkg_filegroup(
    name = "pkg",
    srcs = [
        ":pkg-link",
        ":pkg-runtime",
    ],
    visibility = ["//visibility:public"],
)
