[package]
name = "frt-cosim"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
askama = { workspace = true }
frt-shm = { workspace = true }
libc = { workspace = true }
quick-xml = { workspace = true }
regex-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
