[package]
name = "tapa-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tapa"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_path_to_error = { workspace = true }
tapa-task-graph = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
