[package]
name = "tapa-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tapa"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
serde_json = { workspace = true, features = ["preserve_order"] }
serde_path_to_error = { workspace = true }
serde_yaml = "0.9"
tapa-codegen = { workspace = true }
tapa-floorplan = { workspace = true }
tapa-graphir = { workspace = true }
tapa-graphir-export = { workspace = true }
tapa-lowering = { workspace = true }
tapa-rtl = { workspace = true }
tapa-task-graph = { workspace = true }
tapa-topology = { workspace = true }
tapa-xilinx = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
