[package]
name = "tapa-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tapa-protocol.workspace = true
tapa-rtl.workspace = true
tapa-task-graph.workspace = true
tapa-topology.workspace = true

[lints]
workspace = true
