[package]
name = "tapa-floorplan"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tapa-slotting = { path = "../tapa-slotting" }
tapa-topology = { workspace = true }
tapa-task-graph = { workspace = true }
tapa-codegen = { workspace = true }
tapa-rtl = { workspace = true }

[lints]
workspace = true
