[package]
name = "tapa-graphir"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
