[package]
name = "tapa-lowering"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tapa-graphir = { workspace = true }
tapa-rtl = { workspace = true }
tapa-protocol = { workspace = true }
tapa-topology = { workspace = true }
tapa-task-graph = { workspace = true }
tapa-codegen = { workspace = true }
tapa-floorplan = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
