[package]
name = "tapa-py-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "tapa_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
serde_json = { workspace = true }
tapa-protocol = { workspace = true }
tapa-task-graph = { workspace = true }
tapa-graphir = { workspace = true }

[lints]
workspace = true
