[package]
name = "tapa-py-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "tapa_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true }
serde_json = { workspace = true }
tapa-protocol = { workspace = true }
tapa-task-graph = { workspace = true }
tapa-graphir = { workspace = true }
tapa-rtl = { workspace = true }
tapa-topology = { workspace = true }
tapa-slotting = { workspace = true }
tapa-codegen = { workspace = true }
tapa-floorplan = { workspace = true }
tapa-lowering = { workspace = true }
tapa-graphir-export = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tapa-slotting = { workspace = true }
tapa-codegen = { workspace = true }
tapa-rtl = { workspace = true }
tapa-topology = { workspace = true }
tapa-graphir = { workspace = true }
tapa-floorplan = { workspace = true }
tapa-lowering = { workspace = true }
tapa-graphir-export = { workspace = true }
tapa-task-graph = { workspace = true }

[lints]
workspace = true
