[package]
name = "tapa-task-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { workspace = true }
serde = { workspace = true }
# `preserve_order` keeps `serde_json::Value` map keys in insertion order so
# `Design::to_writer` matches the byte sequence Python's `json.dump` emits.
serde_json = { workspace = true, features = ["preserve_order"] }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
