[package]
name = "tapa-xilinx"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
quick-xml = { version = "0.36", features = ["serialize"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = { workspace = true }
regex = { workspace = true }
sha2 = "0.10"
nom = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
