"""TAPA Python library assets build configuration."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "assets",
    srcs = [
        "__init__.py",
        "verilog/__init__.py",
    ],
    data = glob(["verilog/*.v"]),
    visibility = ["//tapa:__subpackages__"],
)

# Expose `verilog/fifo.v` so `//tapa-core` cargo genrules can include
# it in their input set. `tapa-lowering::module_defs` pulls it in via
# `include_str!("../../../tapa/assets/verilog/fifo.v")` at compile
# time, so the Bazel sandbox must materialize it alongside the
# cargo workspace.
exports_files(
    ["verilog/fifo.v"],
    visibility = ["//tapa-core:__pkg__"],
)
