"""TAPA Python library backend build configuration."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_python//python:defs.bzl", "py_library")
load("//bazel:pytest_rules.bzl", "py_test")

py_library(
    name = "backend",
    srcs = glob(
        ["**/*.py"],
        exclude = [
            "*_test.py",
            "test_*.py",
        ],
    ),
    visibility = ["//tapa:__subpackages__"],
    deps = [
        "//tapa/remote",
    ],
)

py_test(
    name = "xilinx_tools_test",
    size = "small",
    srcs = ["xilinx_tools_test.py"],
    deps = [
        ":backend",
        "//tapa/remote",
    ],
)
